--- a/blogPessoal/src/app/menu/menu.component.html
+++ b/blogPessoal/src/app/menu/menu.component.html
@@ -13,12 +13,12 @@
             </li>
 
             <li class="nav-item pl-3">
-                <p class="m-o font-weight-bold text-white fs-16"> Danilo da Silva</p>
+                <p class="m-0 font-weight-bold text-white fs-16"> Danilo da Silva</p>
             </li>
 
             <li class="nav-item pl-3">
                 <a href="">
-                    <p class="text-white fs-16 m-0"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                    <a class="font-weight-bold text-white fs-16 m-0"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
                 </a>
             </li>
 
