--- a/blogPessoal/src/app/rodape/rodape.component.css
+++ b/blogPessoal/src/app/rodape/rodape.component.css
@@ -1,6 +1,5 @@
 ul.social-network{
     list-style:  none;
-    display: inline;
     padding: 0;
 }
 ul.social-network li{
@@ -15,10 +14,10 @@ ul.social-network li{
     padding: 10px;
 
 }
-.fa-facebook-oficial:hover{
+.fa-facebook-official:hover{
     color: #3b5998;
 }
-.fa-isntagram:hover{
+.fa-instagram:hover{
     color: #c13584;
 }
 
