componente inicio sem consumo

--- a/blogPessoal/src/app/menu/menu.component.html
+++ b/blogPessoal/src/app/menu/menu.component.html
@@ -8,12 +8,12 @@
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
         <ul class="navbar-nav mr-auto d-flex align-items-center">
             <li class="nav-item active">
-                <img src="https://i.imgur.com/eEsxSeI.jpg" alt="Imagem de um dog" width="100px" height="100px"
+                <img src="{{foto}}" alt="Imagem de um dog" width="50px" height="50px"
                     class="img-fluid rounded-circle">
             </li>
 
             <li class="nav-item pl-3">
-                <p class="m-0 font-weight-bold text-white fs-16"> Danilo da Silva</p>
+                <p class="m-0 font-weight-bold text-white fs-16">Olá,{{nome}}</p>
             </li>
 
             <li class="nav-item pl-3">
@@ -31,7 +31,7 @@
                     <a href="">
 
                    
-                    <a class="m-0 font-weight-bold text-white fs-16"> Sair<i class="fa fa-sign-out" aria-hidden="true"></i></a>
+                    <a (click)= 'sair()'class="m-0 font-weight-bold text-white fs-16"> Sair<i class="fa fa-sign-out" aria-hidden="true"></i></a>
                 </a>
                 </li>
            
